--- a/web/public/index.html
+++ b/web/public/index.html
@@ -18,7 +18,7 @@
 		></script>
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Salvare! A dangerous ateroid occurence displayer! "
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>Salvare</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
